--- a/rip.html
+++ b/rip.html
@@ -7,33 +7,31 @@
     <link rel="icon"
         href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>❌</text></svg>">
     <title>Error</title>
-    <link rel="stylesheet" href="./src/error_pages/bad/ErrorApp.css">
+    <link rel="stylesheet" href="./css/error.css">
 </head>
 
 <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <script type="module" src="/src/bad/main.jsx"></script>
     <header>
-        <h1 class="logo" onclick="window.location.href = '/'" title="shortUrl by setul">shortUrl</h1>
+        <h1 class="logo" onclick="window.location.href = '/'" title="shortUrl">shortUrl</h1>
     </header>
     <div class="container">
         <div class="image-container">
-            <img class="image404" src="./src/assets/error.svg" alt="404" />
+            <img class="image404" src="./assets/error.svg" alt="404" />
         </div>
         <div class="content-container">
             <div class="content">
                 <h1>Something went wrong</h1>
                 <h2>That wasn't supposed to happen...</h2>
                 <p>Oops! Your short url couldn't be processed. Try again later.</p>
-                <button type="button" class="primary-button" title="Go back to the previous page"
-                    onclick="history.back()">
-                    Go back
-                </button>
+                <butto type="button" class="primary-button" title="Go back to the previous page"
+                    onclick="history.back()">Go
+                    back</button>
             </div>
         </div>
     </div>
     <footer>Copyright © 2025 Setul Parekh. All rights reserved.</footer>
 </body>
+
+<script src="./scripts/get_theme.js"></script>
 
 </html>
