--- a/404.html
+++ b/404.html
@@ -1,8 +1,11 @@
+<!-- Redirect to index.html with a search parameter that is the short url key so the script can run -->
+<noscript>You need to enable JavaScript to run this app.</noscript>
 <script>
     // Extract the path from the URL
     const path = window.location.pathname;
     //Remove trailing and/or leading slash
-    const key = (path.startsWith('/') ? path.slice(1) : path).endsWith('/') ? path.slice(0, -1) : path;
+    const key_temp = path.startsWith('/') ? path.slice(1) : path;
+    const key = key_temp.endsWith('/') ? key_temp.slice(0, -1) : key_temp;
     // Redirect to index.html with query parameter
     if (key) {
         window.location.replace(`/?key=${key}`);
