redirect user turned on, button clicks fixed

--- a/nfd.html
+++ b/nfd.html
@@ -13,7 +13,7 @@
 
 <body>
     <header>
-        <h1 class="logo" onclick="window.location.href = '/'" title="shortUrl">shortUrl</h1>
+        <h1 class="logo" onclick="window.location.href = 'https://shorturl.setulp.com'" title="shortUrl">shortUrl</h1>
     </header>
     <div class="container">
         <div class="image-container">
@@ -24,8 +24,10 @@
                 <h1>404 Page Not Found</h1>
                 <h2>Must've been the wind...</h2>
                 <p>Oops! The short url you entered doesn't exist.</p>
-                <button type="button" class="primary-button" href="/" title="Generate a short url">Generate
-                    one!</button>
+                <button type="button" class="primary-button" title="Generate a short url"
+                    onclick="window.location.href = 'https://shorturl.setulp.com'">
+                    Generate one!
+                </button>
             </div>
         </div>
     </div>
