--- a/rip.html
+++ b/rip.html
@@ -12,7 +12,7 @@
 
 <body>
     <header>
-        <h1 class="logo" onclick="window.location.href = '/'" title="shortUrl">shortUrl</h1>
+        <h1 class="logo" onclick="window.location.href = 'https://shorturl.setulp.com'" title="shortUrl">shortUrl</h1>
     </header>
     <div class="container">
         <div class="image-container">
