--- a/nfd.html
+++ b/nfd.html
@@ -21,7 +21,7 @@
         </div>
         <div class="content-container">
             <div class="content">
-                <h1>404 Page Not Found</h1>
+                <h1>Page Not Found</h1>
                 <h2>Must've been the wind...</h2>
                 <p>Oops! The short url you entered doesn't exist.</p>
                 <button type="button" class="primary-button" title="Generate a short url"
