--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
 </head>
 
 <body>
-    <div class="spinner">
+    <!-- <div class="spinner">
         <div></div>
         <div></div>
         <div></div>
         <div></div>
         <div></div>
         <div></div>
-    </div>
+    </div> -->
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <p></p>
+    <!-- <p></p> -->
 </body>
 
 <script src="./scripts/supabase.js"></script>
