--- a/nfd.html
+++ b/nfd.html
@@ -5,8 +5,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon"
-        href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>⚠️</text></svg>">
+
+    <!-- favicon -->
+    <link rel="icon" href="./assets/favicons/404/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="./assets/favicons/404/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicons/404/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./assets/favicons/404/favicon-16x16.png">
+    <link rel="manifest" href="./site-404.webmanifest">
+
     <title>404 - Page Not Found</title>
     <link rel="stylesheet" href="./css/404.css">
 </head>
